# eibnetmux-domotica-client

./: README
eibnetmux-domotica-client/: Makefile  Makefile.am  Makefile.in  README~  aclocal.m4  config.h  config.h.in  config.status  configure  configure.in  main.cpp
eibnetmux-domotica-client/capi/: Makefile  Makefile~  prepared  prepared.c
eibnetmux-domotica-client/capi/nbproject/: Makefile-Default.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Default.bash  configurations.xml  project.xml
eibnetmux-domotica-client/capi/nbproject/private/: configurations.xml
eibnetmux-domotica-client/doc/: Git  parametri prepared~
eibnetmux-domotica-client/eibtrace/: Makefile  Makefile.am  Makefile.am~  Makefile.in  Makefile.in~  eibtrace  eibtrace.c
eibnetmux-domotica-client/eibtrace/.deps/: eibtrace.Po
eibnetmux-domotica-client/eibtrace/nbproject/: Makefile-Default.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Default.bash  configurations.xml  project.xml
eibnetmux-domotica-client/eibtrace/nbproject/private/: configurations.xml
eibnetmux-domotica-client/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
