AC_INIT(eibnetmuxclientsamples,1.5.2)
AC_CONFIG_AUX_DIR(scripts)
AM_INIT_AUTOMAKE
AM_CONFIG_HEADER(config.h)
AC_PREREQ(2.60)
AC_SUBST(VERSION)

dnl Check for programs.
AC_LANG_C
AC_PROG_INSTALL
AC_PROG_RANLIB
AC_PROG_MAKE_SET

dnl Checks for libraries.
AC_CHECK_LIB( xyssl, havege_init, [LIBXYSSL=-lxyssl], [LIBXYSSL=] )
AC_SUBST(LIBXYSSL)
PKG_CHECK_MODULES( LIBENMX, libeibnetmux >= 1.9.5 )
AC_SUBST(LIBENMX_CFLAGS)
AC_SUBST(LIBENMX_LIBS)
AC_CHECK_LIB( pth, pth_spawn, [LIBPTH=-lpth], [AC_MSG_ERROR(not found)] )
AC_SUBST(LIBPTH)

dnl Checks for header files.
AC_STDC_HEADERS
AC_HEADER_STDC
AC_HEADER_STDBOOL
AC_CHECK_HEADERS( pth.h,,AC_MSG_ERROR(PTH installed ?))
AC_CHECK_HEADERS( xyssl/dhm.h,,AC_MSG_ERROR(XYSSL installed ?))
AC_CHECK_HEADERS_ONCE( ctype.h errno.h )
AC_CHECK_HEADERS_ONCE( signal.h )
AC_CHECK_HEADERS_ONCE( libgen.h )
AC_CHECK_HEADERS_ONCE( stdint.h stdio.h stdlib.h string.h )
AC_CHECK_HEADERS_ONCE( time.h sys/time.h )
AC_CHECK_HEADERS_ONCE( eibnetmux/enmx_lib.h )

dnl Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_UID_T
AC_TYPE_UINT8_T
AC_TYPE_UINT16_T
AC_TYPE_UINT32_T
AC_C_CONST
AC_TYPE_SIZE_T
AC_TYPE_SIGNAL

dnl Checks for library functions.
AC_CHECK_FUNCS( strerror )
AC_CHECK_FUNCS( malloc free )

AC_OUTPUT( Makefile 
			mylib/Makefile 
			eibcommand/Makefile 
			eibread/Makefile 
			eibstatus/Makefile 
			eibtrace/Makefile 
			search/Makefile
			readmemory/Makefile
			writememory/Makefile
			resetdevice/Makefile
			php/Makefile )
